COH-29842 Add a vector store service to the gRPC proxy (merge main -> ce/main 108267)
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 108272]